--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charSet="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="note" content="environment=development" />
-    <title data-react-helmet="true"></title>
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
-    <link rel="icon" href="/favicon-32x32.png?v=53aa06cf17e4239d0dba6ffd09854e02" type="image/png" />
-    <link rel="manifest" href="/manifest.webmanifest" crossorigin="anonymous" />
-    <link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png?v=53aa06cf17e4239d0dba6ffd09854e02" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png?v=53aa06cf17e4239d0dba6ffd09854e02" />
-    <link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png?v=53aa06cf17e4239d0dba6ffd09854e02" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png?v=53aa06cf17e4239d0dba6ffd09854e02" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png?v=53aa06cf17e4239d0dba6ffd09854e02" />
-    <link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png?v=53aa06cf17e4239d0dba6ffd09854e02" />
-    <link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png?v=53aa06cf17e4239d0dba6ffd09854e02" />
-    <link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png?v=53aa06cf17e4239d0dba6ffd09854e02" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
-      integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <script src="/socket.io/socket.io.js"></script>
-</head>
-
-<body>
-    <div id="___gatsby"></div>
-    <script src="/polyfill.js" nomodule=""></script>
-    <script src="/commons.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charSet="utf-8"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><meta name="note" content="environment=development"/><title data-react-helmet="true"></title><link rel="sitemap" type="application/xml" href="/sitemap.xml"/><link rel="icon" href="/favicon-32x32.png?v=dc5de5137dcd64a4bd5b3daaae3acacf" type="image/png"/><link rel="manifest" href="/manifest.webmanifest" crossorigin="anonymous"/><link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png?v=dc5de5137dcd64a4bd5b3daaae3acacf"/><link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png?v=dc5de5137dcd64a4bd5b3daaae3acacf"/><link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png?v=dc5de5137dcd64a4bd5b3daaae3acacf"/><link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png?v=dc5de5137dcd64a4bd5b3daaae3acacf"/><link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png?v=dc5de5137dcd64a4bd5b3daaae3acacf"/><link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png?v=dc5de5137dcd64a4bd5b3daaae3acacf"/><link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png?v=dc5de5137dcd64a4bd5b3daaae3acacf"/><link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png?v=dc5de5137dcd64a4bd5b3daaae3acacf"/><script src="/socket.io/socket.io.js"></script></head><body><div id="___gatsby"></div><script src="/polyfill.js" nomodule=""></script><script src="/commons.js"></script></body></html>
